[package]
name = "rtic-ctf-app"
version = "0.1.0"
edition = "2021"
authors = ["Jon Lamb"]

[workspace]
members = [
    "barectf-rs",
]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rtic-monotonic = "1.0"
cortex-m-rtic = "1.0"
#panic-abort = "0.3"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.3", features = ["cortex-m"] }
rtt-logger = "0.2"
log = "0.4"
bbqueue = "0.5"
embedded-dma = "0.2"

[dependencies.stm32f4xx-hal]
version = "0.12"
features = ["rt", "stm32f411", "usb_fs", "rtic"]

[dependencies.barectf-rs]
path = "barectf-rs"

[profile.release]
codegen-units = 1
debug = true
lto = true
